fix dark mode tags

--- a/tpl/css/styles.css
+++ b/tpl/css/styles.css
@@ -228,6 +228,10 @@ article p+p {
         background: rgb(44, 44, 48);
     }
 
+    .tag {
+        color: rgb(44, 44, 48);
+    }
+
     img.placeholder {
         filter: invert(100%);
     }
